redis-service.yml
apiVersion: v1
kind: Service       
metadata:
  name: redis-master-service 
  labels:            
    app: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379       
    targetPort: 6379
  selector:          
    app: redis
    role: master
    tier: backend
