service.yml
apiVersion: v1
kind: Service
metadata:
  name: url-shortner-service
  labels:
    app: url-shortner
spec:
  ports:
  - port: 3001
    targetPort: 3001
    name: http
  selector:
    app: url-shortner
    version: v1
