url-istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: url-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: url-app
spec:
  hosts:
  - "*"
  gateways:
  - url-app-gateway
  http:
  - match:
    - uri:
        exact: /api/v1
    - uri:
        prefix: /
    route:
    - destination:
        host: url-shortner-service
        port:
          number: 3001
